--- a/Day 7/Springboot/src/main/resources/application.properties
+++ b/Day 7/Springboot/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=helloworld
+# H2 database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA (Hibernate) config
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 Console (for browser access)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
